// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PhilosophySection matches snapshot (dark mode) 1`] = `
<div>
  <section
    class="css-1yazao"
    data-testid="philosophy-section"
  >
    <div
      class="MuiBox-root css-jc6ucu"
      variant="1"
    />
    <div
      class="MuiBox-root css-r92jjn"
      variant="2"
    />
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd css-u4uvlt-MuiContainer-root"
    >
      <div>
        <div
          class="MuiBox-root css-v46l6e"
        >
          <div>
            <div
              class="MuiBox-root css-32rxv4"
            />
          </div>
          <blockquote
            class="css-x4i1up"
          >
            <span>
              <span
                class="css-25k912"
              >
                Great
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                products
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                aren't
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                just
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                built.
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                They
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                are
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                carefully
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                crafted
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                through
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                empathy,
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                iteration,
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                and
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                obsession
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                with
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                detail.
              </span>
            </span>
          </blockquote>
          <div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-ahhpty-MuiTypography-root"
            >
              — my design philosophy
            </p>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`PhilosophySection matches snapshot (light mode) 1`] = `
<div>
  <section
    class="css-12mbhks"
    data-testid="philosophy-section"
  >
    <div
      class="MuiBox-root css-866s70"
      variant="1"
    />
    <div
      class="MuiBox-root css-1bg0yqu"
      variant="2"
    />
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd css-u4uvlt-MuiContainer-root"
    >
      <div>
        <div
          class="MuiBox-root css-v46l6e"
        >
          <div>
            <div
              class="MuiBox-root css-tj57u3"
            />
          </div>
          <blockquote
            class="css-3e0vga"
          >
            <span>
              <span
                class="css-25k912"
              >
                Great
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                products
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                aren't
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                just
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                built.
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                They
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                are
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                carefully
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                crafted
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                through
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                empathy,
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                iteration,
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                and
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                obsession
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                with
              </span>
            </span>
            <span>
              <span
                class="css-25k912"
              >
                detail.
              </span>
            </span>
          </blockquote>
          <div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-oqmszb-MuiTypography-root"
            >
              — my design philosophy
            </p>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
